--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chess</title>
     <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="./style/main.css">
 </head>
 <body>
     <section class="main__screen">
@@ -186,6 +186,6 @@
             <h4>Лед тронулся, господа присяжные заседатели!<span class="runnig__line--circle"></span></h4>
         </div>
     </div>
-    <script src="/js/main.js" type="module"></script>
+    <script src="./js/main.js" type="module"></script>
 </body>
 </html>
