--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <header class="header">
                     <a href="#" class="header__logo">
-                        <img src="/img/logo.png" alt="Клуб четырех коней" width="245" height="36">
+                        <img src="img/logo.png" alt="Клуб четырех коней" width="245" height="36">
                     </a>
             </header>
             <div class="main__screen--wrapper">
@@ -43,7 +43,7 @@
                         <span class="call__wrapper--text-red">«Плодотворная дебютная идея»</span></span>
                     </h3>
                     <div class="call__img">
-                    <img src="/img/men_play_chess.png" alt="Мужчины играют в шахматы" width="394" height="250">
+                    <img src="img/men_play_chess.png" alt="Мужчины играют в шахматы" width="394" height="250">
                 </div>
                     <span class="call__text--replace"></span>
             </div>
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="about__wrapper">
                 <div class="about__image">
-                    <img src="/img/man_thinks.jpg" alt="Мужчина думает над ходом в шахматы" width="530" height="609">
+                    <img src="img/man_thinks.jpg" alt="Мужчина думает над ходом в шахматы" width="530" height="609">
                 </div>
                 <div class="about__content">
                     <h3>и Сеанс <span>одновременной игры в шахматы на 160 досках</span> гроссмейстера О. Бендера</h3>
@@ -103,7 +103,7 @@
                         <li class="stages__wrapper--content__item">Создание аэропорта «Большие Васюки» с регулярным отправлением почтовых самолётов и дирижаблей во все концы света, включая Лос-Анжелос и Мельбурн</li>
                     </ul>
                 </div>
-                <img class="stages__plain" src="/img/plain.png" alt="Самолет" width="402" height="235">
+                <img class="stages__plain" src="img/plain.png" alt="Самолет" width="402" height="235">
             </div>
 
             <div class="stages__wrapper--slider">
@@ -133,37 +133,37 @@
             <div class="participants__wrapper--content">
                 <ul class="participants__wrapper--content__items">
                     <li class="participants__item">
-                        <img src="/img/participants.png" alt="Фото участника" width="320" height="320">
+                        <img src="img/participants.png" alt="Фото участника" width="320" height="320">
                         <p class="participants__name">Хозе-Рауль Капабланка</p>
                         <p>Чемпион мира по шахматам</p>
                         <a class="participants__content--btn" href="#">Подробнее</a>
                     </li>
                     <li class="participants__item">
-                        <img src="/img/participants.png" alt="Фото участника" width="320" height="320">
+                        <img src="img/participants.png" alt="Фото участника" width="320" height="320">
                         <p class="participants__name">Эммануил Ласкер</p>
                         <p>Чемпион мира по шахматам</p>
                         <a class="participants__content--btn" href="#">Подробнее</a>
                     </li>
                     <li class="participants__item">
-                        <img src="/img/participants.png" alt="Фото участника" width="320" height="320">
+                        <img src="img/participants.png" alt="Фото участника" width="320" height="320">
                         <p class="participants__name">Александр Алехин</p>
                         <p>Чемпион мира по шахматам</p>
                         <a class="participants__content--btn" href="#">Подробнее</a>
                     </li>
                     <li class="participants__item">
-                        <img src="/img/participants.png" alt="Фото участника" width="320" height="320">
+                        <img src="img/participants.png" alt="Фото участника" width="320" height="320">
                         <p class="participants__name">Арон Нимцович</p>
                         <p>Чемпион мира по шахматам</p>
                         <a class="participants__content--btn" href="#">Подробнее</a>
                     </li>
                     <li class="participants__item">
-                        <img src="/img/participants.png" alt="Фото участника" width="320" height="320">
+                        <img src="img/participants.png" alt="Фото участника" width="320" height="320">
                         <p class="participants__name">Рихард Рети</p>
                         <p>Чемпион мира по шахматам</p>
                         <a class="participants__content--btn" href="#">Подробнее</a>
                     </li>
                     <li class="participants__item">
-                        <img src="/img/participants.png" alt="Фото участника" width="320" height="320">
+                        <img src="img/participants.png" alt="Фото участника" width="320" height="320">
                         <p class="participants__name">Остап Бендер</p>
                         <p>Чемпион мира по шахматам</p>
                         <a class="participants__content--btn" href="#">Подробнее</a>
