--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
         <div class="container">
             <div class="call__wrapper">
                     <h3 class="call__text">Чтобы поддержать Международный васюкинский турнир
-                        <span id="call__text--none">посетите лекцию на тему:
+                        <span id="call__text--none" class="call__text--replace">посетите лекцию на тему:
                         <span class="call__wrapper--text-red">«Плодотворная дебютная идея»</span></span>
                     </h3>
                     <div class="call__img">
-                    <img src="img/men_play_chess.png" alt="Мужчины играют в шахматы" width="394" height="250">
-                </div>
-                    <span class="call__text--replace"></span>
+                        <img src="img/men_play_chess.png" alt="Мужчины играют в шахматы" width="394" height="250">
+                    </div>
             </div>
         </div>
     </section>
